src/TabButton/tabButton.css
@import "../Button/button.css"; /* imports base.css */

.default
{
    margin:                 0;
    color:                  var( --PC-GREY--L70 );

    text-transform:         none;


    &:not(:last-child)
    {
        margin-right: var( --spacing-2 );
    }

    .content
    {
        min-width: 0;
        margin:    0;
        padding:   0;

        border-radius:          2px;
        border:                 1px solid transparent;
        border-bottom-color:    var( --PC-GREY--L70 );
    }

    &:focus
    {
        outline:    none;

        .content
        {
            border:     1px solid var( --PC-BLUE );
            box-shadow: 0 0 0 2px color( var( --PC-BLUE ) a( 30% ) );
        }
    }
}

.label
{
    @extend %Nessie-Bold;

    font-size:      var( --typo-3 );
    line-height:    var( --line-height-s );
    padding-left:   var( --spacing-1 );
    padding-right:  var( --spacing-1 );
}

.active
{
    color:          var( --PC-BLUE );
    border-bottom:  1px solid var( --PC-BLUE );
    pointer-events: none;
    cursor:         default;
}

.subtitle
{
    font-weight: 	normal;
    text-transform: initial;
}

